left menu + create post

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="navigation">
                 <div class="user">
-                    <img src="img/avatar.png" alt="avatar" class="user-avatar">
+                    <img src="img/avatar.jpg" alt="avatar" class="user-avatar">
                     <span class="user-name">Mateusz</span>
                 </div>
                 <div class="navigation-panel">
@@ -34,6 +34,7 @@
                         </svg>
                     </a>
                     <a href="#" class="icon-link">
+                        <span class="notification">8</span>
                         <svg class="header-icon" width="16" height="22">
                             <use xlink:href="img/icons.svg#bell"></use>
                         </svg>                            
@@ -52,5 +53,136 @@
             </div>
         </div>
     </header>
+    <div class="container">
+        <div class="menu-sidebar">
+            <div class="user">
+                <img src="img/avatar.jpg" alt="avatar" class="user-avatar">
+                <span class="user-name">Mateusz Wierzbicki</span>
+            </div>
+            <!-- /.user-->
+            <nav class="nav-group">
+                <a href="#" class="nav-link active">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#newsFeed"></use>
+                    </svg>
+                    <span class="nav-text">News Feed</span>
+                </a>                
+                <a href="#" class="nav-link">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#messages"></use>
+                    </svg>
+                    <span class="nav-text">Messages</span>
+                </a>
+                <a href="#" class="nav-link">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#marketplace"></use>
+                    </svg>
+                    <span class="nav-text">Marketplace</span>
+                </a>
+            </nav>
+            <nav class="nav-group">
+                <h3 class="nav-title">Shortcuts</h3>
+                <a href="#" class="nav-link">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#trophy"></use>
+                    </svg>
+                    <span class="nav-text">Product Design</span>
+                </a>
+                <a href="#" class="nav-link">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#trophy"></use>
+                    </svg>
+                    <span class="nav-text">UX & UI</span>
+                </a>
+                <a href="#" class="nav-link">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#trophy"></use>
+                    </svg>
+                    <span class="nav-text">Figma</span>
+                </a>
+                <a href="#" class="nav-link">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#trophy"></use>
+                    </svg>
+                    <span class="nav-text">Ant Design</span>
+                </a>
+            </nav>
+            <nav class="nav-group">
+                <h3 class="nav-title">Explore</h3>
+                <a href="#" class="nav-link">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#flag"></use>
+                    </svg>
+                    <span class="nav-text">Pages</span>
+                </a>
+                <a href="#" class="nav-link">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#service"></use>
+                    </svg>
+                    <span class="nav-text">Groups</span>
+                </a>
+                <a href="#" class="nav-link">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#home"></use>
+                    </svg>
+                    <span class="nav-text">Events</span>
+                </a>
+                <a href="#" class="nav-link">
+                    <svg class="nav-icon" width="24" height="24">
+                        <use xlink:href="img/icons.svg#rocket"></use>
+                    </svg>
+                    <span class="nav-text">Games</span>
+                </a>
+                <a href="#" class="see-more">
+                    <svg class="see-more-icon" width="16" height="16">
+                        <use xlink:href="img/icons.svg#caret-dawn"></use>
+                    </svg>
+                    <span class="nav-text">See more...</span>
+                </a>
+            </nav>
+        </div>
+        <!-- /.menu-sidebar -->
+        <div class="main-feed">
+            <div class="create-post">
+                <div class="header">
+                    <h4 class="create-post-title">Create post</h4>
+                </div>
+                <!-- /.header -->
+                <div class="body">
+                    <img src="img/avatar.jpg" alt="avatar" class="user-avatar">
+                    <div class="create-post-input" contenteditable="true">What’s on your mind, Mateusz?</div>
+                </div>
+                <!-- /.body -->
+                <div class="footer">
+                    <button class="tag">
+                        <svg class="tag-icon" width="24" height="24">
+                            <use xlink:href="img/icons.svg#picture"></use>
+                        </svg>
+                        <cpan class="button-text">Photo/Video</cpan>
+                    </button>
+                    <button class="tag">
+                        <svg class="tag-icon" width="24" height="24">
+                            <use xlink:href="img/icons.svg#user-add"></use>
+                        </svg>
+                        <cpan class="button-text">Tag friends</cpan>
+                    </button>
+                    <button class="tag">
+                        <svg class="tag-icon" width="24" height="24">
+                            <use xlink:href="img/icons.svg#smile"></use>
+                        </svg>
+                        <cpan class="button-text">Feeling/Activ...</cpan>
+                    </button>
+                    <button class="tag">
+                        <svg class="dropdawn-icon" width="24" height="24">
+                            <use xlink:href="img/icons.svg#ellipsis"></use>
+                        </svg>
+                    </button>
+                </div>
+                <!-- /.footer -->
+            </div>
+            <!-- /.sreate-post -->
+        </div>
+        <!-- /.main-feed -->
+    </div>
 </body>
 </html>
